# onlyoffice-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: hello_world.docbuilder  register_with_claude.sh
src/onlyoffice_mcp/: __init__.py  __main__.py  annotations.py  charts.py  converter.py  cursor.py  docbuilder.py  docx_ops.py  errors.py  graphics.py  history.py  libreoffice.py  pptx_ops.py  preview.py  safety.py  search.py  server.py  spell.py  stats.py  storage.py  styling.py  validation.py  xlsx_ops.py
